[package]
name = "csclib"
version = "1.0.0"
edition = "2021"
description = "My Collection of Utilities to Make Life Easy and More Convenient. This will wrap and modify existing function to support cache or default/dynamic parameter. :) ."
license = "MIT OR Apache-2.0"
repository = "https://github.com/cheengshuchin/CSCLib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
